[gd_scene load_steps=5 format=3 uid="uid://sd4cts34u7t7"]

[ext_resource type="Theme" uid="uid://cs7cpy7hookvc" path="res://UI_THEME.tres" id="1_8qhll"]
[ext_resource type="FontFile" uid="uid://vxjlxsvfng4u" path="res://Fonts/segui_semi_bold.ttf" id="2_eayhx"]
[ext_resource type="Script" uid="uid://c78ctoxwbm07l" path="res://_MANAGERS/UI/slider_manager.gd" id="2_kl5ym"]

[sub_resource type="LabelSettings" id="LabelSettings_kl5ym"]
font = ExtResource("2_eayhx")
font_size = 30
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[node name="binzuSlider" type="HSlider"]
custom_minimum_size = Vector2(500, 0)
offset_right = 500.0
offset_bottom = 58.0
size_flags_vertical = 1
theme = ExtResource("1_8qhll")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_kl5ym")

[node name="numberLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 517.0
offset_top = 6.0
offset_right = 592.0
offset_bottom = 47.0
text = "100%"
label_settings = SubResource("LabelSettings_kl5ym")

[node name="nameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -615.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = 51.0
text = "Label"
label_settings = SubResource("LabelSettings_kl5ym")
horizontal_alignment = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
